# breakfloor

./: .gitignore  Cargo.toml  README.md  roadmap.txt
data/animations/: idle.fbx  jump.fbx  shoot.fbx  walk_forward.fbx
data/levels/: block_bug.rgs  block_remake.rgs  block_scene.rgs  block_scene_2.rgs  simple_floor.rgs  test.rgs
data/models/: idle.fbx  shooting.fbx  shooting.rgs  shooting2.fbx  soldier_LOD0.fbx  soldier_export.fbx  walking_1st.fbx  walking_1st.fbx.options
data/textures/: gun_dDo_d.tga
src/: animation.rs  game.rs  level.rs  main.rs  message.rs  network_manager.rs  player.rs  player_event.rs
