[package]
name = "breakfloor"
version = "0.1.0"
authors = ["wtblife <wtblife@gmail.com>"]
edition = "2018"

[features]
server = []
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rg3d = { path = "../rg3d" }
laminar = "0.5"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
